[gd_scene load_steps=6 format=3 uid="uid://dvnt6pcne7shm"]

[ext_resource type="Script" path="res://number.gd" id="1_72j6f"]

[sub_resource type="Gradient" id="Gradient_h1a7l"]
offsets = PackedFloat32Array(0.00617284, 1)
colors = PackedColorArray(1, 0.00784314, 0.129412, 1, 9.62615e-06, 0.925309, 0.928367, 1)

[sub_resource type="Animation" id="Animation_gtacf"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("..:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1.2, 1.2)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("RichTextLabel:custom_minimum_size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 20)]
}

[sub_resource type="Animation" id="Animation_eg7b3"]
resource_name = "bump"
length = 0.1
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("..:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1.2, 1.2), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xubda"]
_data = {
"RESET": SubResource("Animation_gtacf"),
"bump": SubResource("Animation_eg7b3")
}

[node name="Number" type="CenterContainer"]
scale = Vector2(1.2, 1.2)
use_top_left = true
script = ExtResource("1_72j6f")
max_font_size = 40
min_font_size = 20
rise_height = 100
lock_time_s = 1
lifetime_s = 1
increment_gradient = SubResource("Gradient_h1a7l")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4

[node name="RichTextLabel" type="RichTextLabel" parent="HBoxContainer"]
unique_name_in_owner = true
texture_filter = 1
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/normal_font_size = 201
bbcode_enabled = true
text = "[center]0"
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../HBoxContainer")
libraries = {
"": SubResource("AnimationLibrary_xubda")
}

[node name="LockTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="FreeTimer" type="Timer" parent="."]
wait_time = 2.0

[connection signal="timeout" from="LockTimer" to="." method="_on_lock_timer_timeout"]
[connection signal="timeout" from="FreeTimer" to="." method="_on_free_timer_timeout"]
